<resources>
    <string name="app_name">Yasin</string>

    <string name="transparent">transparent</string>

    <string name="Tab1">1-2-3</string>
    <string name="Tab2">4-5-6</string>
    <string name="Tab3">7-8</string>
    <string name="Tab4">9-10</string>
    <string name="Tab5">11-12</string>
    <string name="Tab7">13-14</string>
    <string name="Tab8">15-16</string>
    <string name="Tab9">17-18</string>
    <string name="Tab10">19-20</string>
    <string name="Tab11">21-22</string>
    <string name="Tab12">23-34</string>
    <string name="Tab13">25-26</string>
    <string name="Tab14">27-28</string>
    <string name="Tab15">29-30</string>
    <string name="Tab16">31-32</string>
    <string name="Tab17">33-34</string>
    <string name="Tab18">35-36</string>
    <string name="Tab19">37-38</string>
    <string name="Tab20">39-40</string>
    <string name="Tab21">41-42</string>
    <string name="Tab22">43-44</string>
    <string name="Tab23">45-46</string>
    <string name="Tab24">47</string>
    <string name="Tab25">48-49</string>
    <string name="Tab26">50-51</string>
    <string name="Tab27">52-53</string>
    <string name="Tab28">54-55</string>
    <string name="Tab29">56-57</string>
    <string name="Tab30">59-60</string>
    <string name="Tab31">61-62</string>
    <string name="Tab32">63-64</string>
    <string name="Tab33">65-66</string>
    <string name="Tab34">67-68</string>
    <string name="Tab35">69-70</string>
    <string name="Tab36">71-72</string>
    <string name="Tab37">73-74</string>
    <string name="Tab38">75-76</string>
    <string name="Tab39">77-78</string>
    <string name="Tab40">79-80</string>
    <string name="Tab41">81-82</string>
    <string name="Tab42">83</string>


    //Ayat Yasin
    <string name="bismillah">بِسْمِ اللهِ الرَّحْمنِ الرَّحِيمِ</string>
    <string name="ayat1">يسٓ ﴿١﴾</string>
    <string name="ayat2">وَٱلْقُرْءَانِ ٱلْحَكِيمِ ﴿٢﴾</string>
    <string name="ayat3">إِنَّكَ لَمِنَ ٱلْمُرْسَلِينَ ﴿ ٣ ﴾</string>
    <string name="ayat4">عَلَىٰ صِرَ‌ٰطٍۢ مُّسْتَقِيمٍۢ ﴿٤﴾</string>
    <string name="ayat5">تَنزِيلَ ٱلْعَزِيزِ ٱلرَّحِيمِ ﴿ ٥ ﴾</string>
    <string name="ayat6">لِتُنذِرَ قَوْمًۭا مَّآ أُنذِرَ ءَابَآؤُهُمْ فَهُمْ غَـٰفِلُونَ ﴿٦﴾</string>
    <string name="ayat7">لَقَدْ حَقَّ ٱلْقَوْلُ عَلَىٰٓ أَكْثَرِهِمْ فَهُمْ لَا يُؤْمِنُونَ ﴿ ٧ ﴾</string>
    <string name="ayat8">إِنَّا جَعَلْنَا فِىٓ أَعْنَـٰقِهِمْ أَغْلَـٰلًۭا فَهِىَ إِلَى ٱلْأَذْقَانِ فَهُم مُّقْمَحُونَ ﴿٨﴾</string>
    <string name="ayat9">وَجَعَلْنَا مِنۢ بَيْنِ أَيْدِيهِمْ سَدًّۭا وَمِنْ خَلْفِهِمْ سَدًّۭا فَأَغْشَيْنَـٰهُمْ فَهُمْ لَا يُبْصِرُونَ ﴿٩﴾</string>
    <string name="ayat10">وَسَوَآءٌ عَلَيْهِمْ ءَأَنذَرْتَهُمْ أَمْ لَمْ تُنذِرْهُمْ لَا يُؤْمِنُونَ ﴿١٠﴾</string>
    <string name="ayat11">إِنَّمَا تُنذِرُ مَنِ ٱتَّبَعَ ٱلذِّكْرَ وَخَشِىَ ٱلرَّحْمَـٰنَ بِٱلْغَيْبِ ۖ فَبَشِّرْهُ بِمَغْفِرَةٍۢ وَأَجْرٍۢ كَرِيمٍ ﴿١١﴾</string>
    <string name="ayat12">إِنَّا نَحْنُ نُحْىِ ٱلْمَوْتَىٰ وَنَكْتُبُ مَا قَدَّمُوا۟ وَءَاثَـٰرَهُمْ ۚ وَكُلَّ شَىْءٍ أَحْصَيْنَـٰهُ فِىٓ إِمَامٍۢ مُّبِينٍۢ ﴿١٢﴾</string>
    <string name="ayat13">وَٱضْرِبْ لَهُم مَّثَلًا أَصْحَـٰبَ ٱلْقَرْيَةِ إِذْ جَآءَهَا ٱلْمُرْسَلُونَ ﴿١٣﴾</string>
    <string name="ayat14">إِذْ أَرْسَلْنَآ إِلَيْهِمُ ٱثْنَيْنِ فَكَذَّبُوهُمَا فَعَزَّزْنَا بِثَالِثٍۢ فَقَالُوٓا۟ إِنَّآ إِلَيْكُم مُّرْسَلُونَ ﴿١٤﴾</string>
    <string name="ayat15">قَالُوا۟ مَآ أَنتُمْ إِلَّا بَشَرٌۭ مِّثْلُنَا وَمَآ أَنزَلَ ٱلرَّحْمَـٰنُ مِن شَىْءٍ إِنْ أَنتُمْ إِلَّا تَكْذِبُونَ ﴿١٥﴾</string>
    <string name="ayat16">قَالُوا۟ رَبُّنَا يَعْلَمُ إِنَّآ إِلَيْكُمْ لَمُرْسَلُونَ ﴿١٦﴾</string>
    <string name="ayat17">وَمَا عَلَيْنَآ إِلَّا ٱلْبَلَـٰغُ ٱلْمُبِينُ ﴿١٧﴾</string>
    <string name="ayat18">قَالُوٓا۟ إِنَّا تَطَيَّرْنَا بِكُمْ ۖ لَئِن لَّمْ تَنتَهُوا۟ لَنَرْجُمَنَّكُمْ وَلَيَمَسَّنَّكُم مِّنَّا عَذَابٌ أَلِيمٌۭ ﴿١٨﴾</string>
    <string name="ayat19">قَالُوا۟ طَـٰٓئِرُكُم مَّعَكُمْ ۚ أَئِن ذُكِّرْتُم ۚ بَلْ أَنتُمْ قَوْمٌۭ مُّسْرِفُونَ ﴿١٩﴾</string>
    <string name="ayat20">وَجَآءَ مِنْ أَقْصَا ٱلْمَدِينَةِ رَجُلٌۭ يَسْعَىٰ قَالَ يَـٰقَوْمِ ٱتَّبِعُوا۟ ٱلْمُرْسَلِينَ ﴿٢٠﴾</string>
    <string name="ayat21">ٱتَّبِعُوا۟ مَن لَّا يَسْـَٔلُكُمْ أَجْرًۭا وَهُم مُّهْتَدُونَ ﴿٢١﴾</string>
    <string name="ayat22">وَمَا لِىَ لَآ أَعْبُدُ ٱلَّذِى فَطَرَنِى وَإِلَيْهِ تُرْجَعُونَ ﴿٢٢﴾</string>
    <string name="ayat23">ءَأَتَّخِذُ مِن دُونِهِۦٓ ءَالِهَةً إِن يُرِدْنِ ٱلرَّحْمَـٰنُ بِضُرٍّۢ لَّا تُغْنِ عَنِّى شَفَـٰعَتُهُمْ شَيْـًۭٔا وَلَا يُنقِذُونِ ﴿٢٣﴾</string>
    <string name="ayat24">إِنِّىٓ إِذًۭا لَّفِى ضَلَـٰلٍۢ مُّبِينٍ ﴿٢٤﴾</string>
    <string name="ayat25">إِنِّىٓ ءَامَنتُ بِرَبِّكُمْ فَٱسْمَعُونِ ﴿٢٥﴾</string>
    <string name="ayat26">قِيلَ ٱدْخُلِ ٱلْجَنَّةَ ۖ قَالَ يَـٰلَيْتَ قَوْمِى يَعْلَمُونَ ﴿٢٦﴾</string>
    <string name="ayat27">بِمَا غَفَرَ لِى رَبِّى وَجَعَلَنِى مِنَ ٱلْمُكْرَمِينَ ﴿٢٧﴾</string>
    <string name="ayat28">وَمَآ أَنزَلْنَا عَلَىٰ قَوْمِهِۦ مِنۢ بَعْدِهِۦ مِن جُندٍۢ مِّنَ ٱلسَّمَآءِ وَمَا كُنَّا مُنزِلِينَ ﴿٢٨﴾</string>
    <string name="ayat29">إِن كَانَتْ إِلَّا صَيْحَةًۭ وَ‌ٰحِدَةًۭ فَإِذَا هُمْ خَـٰمِدُونَ ﴿٢٩﴾</string>
    <string name="ayat30">يَـٰحَسْرَةً عَلَى ٱلْعِبَادِ ۚ مَا يَأْتِيهِم مِّن رَّسُولٍ إِلَّا كَانُوا۟ بِهِۦ يَسْتَهْزِءُونَ ﴿٣٠﴾</string>
    <string name="ayat31">أَلَمْ يَرَوْا۟ كَمْ أَهْلَكْنَا قَبْلَهُم مِّنَ ٱلْقُرُونِ أَنَّهُمْ إِلَيْهِمْ لَا يَرْجِعُونَ ﴿٣١﴾</string>
    <string name="ayat32">وَإِن كُلٌّۭ لَّمَّا جَمِيعٌۭ لَّدَيْنَا مُحْضَرُونَ ﴿٣٢﴾</string>
    <string name="ayat33">وَءَايَةٌۭ لَّهُمُ ٱلْأَرْضُ ٱلْمَيْتَةُ أَحْيَيْنَـٰهَا وَأَخْرَجْنَا مِنْهَا حَبًّۭا فَمِنْهُ يَأْكُلُونَ ﴿٣٣﴾</string>
    <string name="ayat34">وَجَعَلْنَا فِيهَا جَنَّـٰتٍۢ مِّن نَّخِيلٍۢ وَأَعْنَـٰبٍۢ وَفَجَّرْنَا فِيهَا مِنَ ٱلْعُيُونِ ﴿٣٤﴾</string>
    <string name="ayat35">لِيَأْكُلُوا۟ مِن ثَمَرِهِۦ وَمَا عَمِلَتْهُ أَيْدِيهِمْ ۖ أَفَلَا يَشْكُرُونَ ﴿٣٥﴾</string>
    <string name="ayat36">سُبْحَـٰنَ ٱلَّذِى خَلَقَ ٱلْأَزْوَ‌ٰجَ كُلَّهَا مِمَّا تُنۢبِتُ ٱلْأَرْضُ وَمِنْ أَنفُسِهِمْ وَمِمَّا لَا يَعْلَمُونَ ﴿٣٦﴾</string>
    <string name="ayat37">وَءَايَةٌۭ لَّهُمُ ٱلَّيْلُ نَسْلَخُ مِنْهُ ٱلنَّهَارَ فَإِذَا هُم مُّظْلِمُونَ ﴿٣٧﴾</string>
    <string name="ayat38">وَٱلشَّمْسُ تَجْرِى لِمُسْتَقَرٍّۢ لَّهَا ۚ ذَ‌ٰلِكَ تَقْدِيرُ ٱلْعَزِيزِ ٱلْعَلِيمِ ﴿٣٨﴾</string>
    <string name="ayat39">وَٱلْقَمَرَ قَدَّرْنَـٰهُ مَنَازِلَ حَتَّىٰ عَادَ كَٱلْعُرْجُونِ ٱلْقَدِيمِ ﴿٣٩﴾</string>
    <string name="ayat40">لَا ٱلشَّمْسُ يَنۢبَغِى لَهَآ أَن تُدْرِكَ ٱلْقَمَرَ وَلَا ٱلَّيْلُ سَابِقُ ٱلنَّهَارِ ۚ وَكُلٌّۭ فِى فَلَكٍۢ يَسْبَحُونَ ﴿٤٠﴾</string>
    <string name="ayat41">وَءَايَةٌۭ لَّهُمْ أَنَّا حَمَلْنَا ذُرِّيَّتَهُمْ فِى ٱلْفُلْكِ ٱلْمَشْحُونِ ﴿٤١﴾</string>
    <string name="ayat42">وَخَلَقْنَا لَهُم مِّن مِّثْلِهِۦ مَا يَرْكَبُونَ ﴿٤٢﴾</string>
    <string name="ayat43">وَإِن نَّشَأْ نُغْرِقْهُمْ فَلَا صَرِيخَ لَهُمْ وَلَا هُمْ يُنقَذُونَ ﴿٤٣﴾</string>
    <string name="ayat44">لَّا رَحْمَةًۭ مِّنَّا وَمَتَـٰعًا إِلَىٰ حِينٍۢ ﴿٤٤﴾</string>
    <string name="ayat45">وَإِذَا قِيلَ لَهُمُ ٱتَّقُوا۟ مَا بَيْنَ أَيْدِيكُمْ وَمَا خَلْفَكُمْ لَعَلَّكُمْ تُرْحَمُونَ ﴿٤٥﴾</string>
    <string name="ayat46">وَمَا تَأْتِيهِم مِّنْ ءَايَةٍۢ مِّنْ ءَايَـٰتِ رَبِّهِمْ إِلَّا كَانُوا۟ عَنْهَا مُعْرِضِينَ ﴿٤٦﴾</string>
    <string name="ayat47">وَإِذَا قِيلَ لَهُمْ أَنفِقُوا۟ مِمَّا رَزَقَكُمُ ٱللَّهُ قَالَ ٱلَّذِينَ كَفَرُوا۟ لِلَّذِينَ ءَامَنُوٓا۟ أَنُطْعِمُ مَن لَّوْ يَشَآءُ ٱللَّهُ أَطْعَمَهُۥٓ إِنْ أَنتُمْ إِلَّا فِى ضَلَـٰلٍۢ مُّبِينٍۢ ﴿٤٧﴾</string>
    <string name="ayat48">وَيَقُولُونَ مَتَىٰ هَـٰذَا ٱلْوَعْدُ إِن كُنتُمْ صَـٰدِقِينَ ﴿٤٨﴾</string>
    <string name="ayat49">مَا يَنظُرُونَ إِلَّا صَيْحَةًۭ وَ‌ٰحِدَةًۭ تَأْخُذُهُمْ وَهُمْ يَخِصِّمُونَ ﴿٤٩﴾</string>
    <string name="ayat50">فَلَا يَسْتَطِيعُونَ تَوْصِيَةًۭ وَلَآ إِلَىٰٓ أَهْلِهِمْ يَرْجِعُونَ ﴿٥٠﴾</string>
    <string name="ayat51">وَنُفِخَ فِى ٱلصُّورِ فَإِذَا هُم مِّنَ ٱلْأَجْدَاثِ إِلَىٰ رَبِّهِمْ يَنسِلُونَ ﴿٥١﴾</string>
    <string name="ayat52">قَالُوا۟ يَـٰوَيْلَنَا مَنۢ بَعَثَنَا مِن مَّرْقَدِنَا ۜ ۗ هَـٰذَا مَا وَعَدَ ٱلرَّحْمَـٰنُ وَصَدَقَ ٱلْمُرْسَلُونَ ﴿٥٢﴾</string>
    <string name="ayat53">إِن كَانَتْ إِلَّا صَيْحَةًۭ وَ‌ٰحِدَةًۭ فَإِذَا هُمْ جَمِيعٌۭ لَّدَيْنَا مُحْضَرُونَ ﴿٥٣﴾</string>
    <string name="ayat54">فَٱلْيَوْمَ لَا تُظْلَمُ نَفْسٌۭ شَيْـًۭٔا وَلَا تُجْزَوْنَ إِلَّا مَا كُنتُمْ تَعْمَلُونَ ﴿٥٤﴾</string>
    <string name="ayat55">إِنَّ أَصْحَـٰبَ ٱلْجَنَّةِ ٱلْيَوْمَ فِى شُغُلٍۢ فَـٰكِهُونَ ﴿٥٥﴾</string>
    <string name="ayat56">هُمْ وَأَزْوَ‌ٰجُهُمْ فِى ظِلَـٰلٍ عَلَى ٱلْأَرَآئِكِ مُتَّكِـُٔونَ ﴿٥٦﴾</string>
    <string name="ayat57">لَهُمْ فِيهَا فَـٰكِهَةٌۭ وَلَهُم مَّا يَدَّعُونَ ﴿٥٧﴾</string>
    <string name="ayat58">سَلَـٰمٌۭ قَوْلًۭا مِّن رَّبٍّۢ رَّحِيمٍۢ ﴿٥٨﴾</string>
    <string name="ayat59">وَٱمْتَـٰزُوا۟ ٱلْيَوْمَ أَيُّهَا ٱلْمُجْرِمُونَ ﴿٥٩﴾</string>
    <string name="ayat60">أَلَمْ أَعْهَدْ إِلَيْكُمْ يَـٰبَنِىٓ ءَادَمَ أَن لَّا تَعْبُدُوا۟ ٱلشَّيْطَـٰنَ ۖ إِنَّهُۥ لَكُمْ عَدُوٌّۭ مُّبِينٌۭ ﴿٦٠﴾</string>
    <string name="ayat61">وَأَنِ ٱعْبُدُونِى ۚ هَـٰذَا صِرَ‌ٰطٌۭ مُّسْتَقِيمٌۭ ﴿٦١﴾</string>
    <string name="ayat62">وَلَقَدْ أَضَلَّ مِنكُمْ جِبِلًّۭا كَثِيرًا ۖ أَفَلَمْ تَكُونُوا۟ تَعْقِلُونَ ﴿٦٢﴾</string>
    <string name="ayat63">هَـٰذِهِۦ جَهَنَّمُ ٱلَّتِى كُنتُمْ تُوعَدُونَ ﴿٦٣﴾</string>
    <string name="ayat64">ٱصْلَوْهَا ٱلْيَوْمَ بِمَا كُنتُمْ تَكْفُرُونَ ﴿٦٤﴾</string>
    <string name="ayat65">ٱلْيَوْمَ نَخْتِمُ عَلَىٰٓ أَفْوَ‌ٰهِهِمْ وَتُكَلِّمُنَآ أَيْدِيهِمْ وَتَشْهَدُ أَرْجُلُهُم بِمَا كَانُوا۟ يَكْسِبُونَ ﴿٦٥﴾</string>
    <string name="ayat66">وَلَوْ نَشَآءُ لَطَمَسْنَا عَلَىٰٓ أَعْيُنِهِمْ فَٱسْتَبَقُوا۟ ٱلصِّرَ‌ٰطَ فَأَنَّىٰ يُبْصِرُونَ ﴿٦٦﴾</string>
    <string name="ayat67">وَلَوْ نَشَآءُ لَمَسَخْنَـٰهُمْ عَلَىٰ مَكَانَتِهِمْ فَمَا ٱسْتَطَـٰعُوا۟ مُضِيًّۭا وَلَا يَرْجِعُونَ ﴿٦٧﴾</string>
    <string name="ayat68">وَمَن نُّعَمِّرْهُ نُنَكِّسْهُ فِى ٱلْخَلْقِ ۖ أَفَلَا يَعْقِلُونَ ﴿٦٨﴾</string>
    <string name="ayat69">وَمَا عَلَّمْنَـٰهُ ٱلشِّعْرَ وَمَا يَنۢبَغِى لَهُۥٓ ۚ إِنْ هُوَ إِلَّا ذِكْرٌۭ وَقُرْءَانٌۭ مُّبِينٌۭ ﴿٦٩﴾</string>
    <string name="ayat70">لِّيُنذِرَ مَن كَانَ حَيًّۭا وَيَحِقَّ ٱلْقَوْلُ عَلَى ٱلْكَـٰفِرِينَ ﴿٧٠﴾</string>
    <string name="ayat71">أَوَلَمْ يَرَوْا۟ أَنَّا خَلَقْنَا لَهُم مِّمَّا عَمِلَتْ أَيْدِينَآ أَنْعَـٰمًۭا فَهُمْ لَهَا مَـٰلِكُونَ ﴿٧١﴾</string>
    <string name="ayat72">وَذَلَّلْنَـٰهَا لَهُمْ فَمِنْهَا رَكُوبُهُمْ وَمِنْهَا يَأْكُلُونَ ﴿٧٢﴾</string>
    <string name="ayat73">وَلَهُمْ فِيهَا مَنَـٰفِعُ وَمَشَارِبُ ۖ أَفَلَا يَشْكُرُونَ ﴿٧٣﴾</string>
    <string name="ayat74">وَٱتَّخَذُوا۟ مِن دُونِ ٱللَّهِ ءَالِهَةًۭ لَّعَلَّهُمْ يُنصَرُونَ ﴿٧٤﴾</string>
    <string name="ayat75">لَا يَسْتَطِيعُونَ نَصْرَهُمْ وَهُمْ لَهُمْ جُندٌۭ مُّحْضَرُونَ ﴿٧٥﴾</string>
    <string name="ayat76">فَلَا يَحْزُنكَ قَوْلُهُمْ ۘ إِنَّا نَعْلَمُ مَا يُسِرُّونَ وَمَا يُعْلِنُونَ ﴿٧٦﴾</string>
    <string name="ayat77">أَوَلَمْ يَرَ ٱلْإِنسَـٰنُ أَنَّا خَلَقْنَـٰهُ مِن نُّطْفَةٍۢ فَإِذَا هُوَ خَصِيمٌۭ مُّبِينٌۭ ﴿٧٧﴾</string>
    <string name="ayat78">وَضَرَبَ لَنَا مَثَلًۭا وَنَسِىَ خَلْقَهُۥ ۖ قَالَ مَن يُحْىِ ٱلْعِظَـٰمَ وَهِىَ رَمِيمٌۭ ﴿٧٨﴾</string>
    <string name="ayat79">قُلْ يُحْيِيهَا ٱلَّذِىٓ أَنشَأَهَآ أَوَّلَ مَرَّةٍۢ ۖ وَهُوَ بِكُلِّ خَلْقٍ عَلِيمٌ ﴿٧٩﴾</string>
    <string name="ayat80">ٱلَّذِى جَعَلَ لَكُم مِّنَ ٱلشَّجَرِ ٱلْأَخْضَرِ نَارًۭا فَإِذَآ أَنتُم مِّنْهُ تُوقِدُونَ ﴿٨٠﴾</string>
    <string name="ayat81">أَوَلَيْسَ ٱلَّذِى خَلَقَ ٱلسَّمَـٰوَ‌ٰتِ وَٱلْأَرْضَ بِقَـٰدِرٍ عَلَىٰٓ أَن يَخْلُقَ مِثْلَهُم ۚ بَلَىٰ وَهُوَ ٱلْخَلَّـٰقُ ٱلْعَلِيمُ ﴿٨١﴾</string>
    <string name="ayat82">إِنَّمَآ أَمْرُهُۥٓ إِذَآ أَرَادَ شَيْـًٔا أَن يَقُولَ لَهُۥ كُن فَيَكُونُ ﴿٨٢﴾</string>
    <string name="ayat83">فَسُبْحَـٰنَ ٱلَّذِى بِيَدِهِۦ مَلَكُوتُ كُلِّ شَىْءٍۢ وَإِلَيْهِ تُرْجَعُونَ ﴿٨٣ ﴾و</string>



</resources>


